updated title stlye to prevent horizontal overflow

--- a/styles/Title.module.css
+++ b/styles/Title.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   /* width: 100%; */
   /*max-width: 22rem;*/
-  top: 1%;
-  left: 2%;
+  overflow-x: hidden;
+  padding: 0.75rem;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -14,8 +14,7 @@
 @media only screen and (max-width: 480px) {
   .main {
     max-width: 100vw;
-    top: 3%;
-    left: 5%;
+    padding: 5%;
     /*font-size: 80pt;*/
   }
 
